added support of redirection when visiting output page and content is null

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
-    <title>My App</title>
+    <title>Ice Cream Place</title>
 </head>
 <body style="height: 100vh;">
 <noscript>You need to enable JavaScript to run this app.</noscript>
